--- a/Game2048/2048.css
+++ b/Game2048/2048.css
@@ -17,7 +17,9 @@ header div {
 
 header div h1 {
     color:#776e65;
-    font-size:60px;
+    padding-top: 20px;
+    font-size:35px;
+    line-height: 35px;
     font-weight: bold;
     text-decoration: none;
 }
